Update Header section

--- a/faq.html
+++ b/faq.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FAQ</title>
   </head>
-  <body class="dark:bg-gray-900">
+  <body class="">
     <!-- NAVBAR  -->
-    <nav
-      class="p-4 text-white dark:bg-gray-900 md:flex md:items-center md:justify-between"
-    >
+    <nav class="p-4 text-white md:flex md:items-center md:justify-between">
       <div class="flex items-center justify-between">
         <a
           href="#"
@@ -52,7 +50,7 @@
     </nav>
     <main class="p-4">
       <!-- FAQ -->
-      <section class="py-6 dark:bg-gray-900 sm:py-8 lg:py-12">
+      <section class="py-6 sm:py-8 lg:py-12">
         <div class="mx-auto max-w-screen-xl px-4 md:px-8">
           <!-- text - start -->
           <div class="mb-10 md:mb-16">
