--- a/index.html
+++ b/index.html
@@ -8,89 +8,180 @@
     <title>Marketingová Agentura</title>
     <meta name="description" content="Marketingová Agentura" />
     <meta name="robots" content="max-image-preview:large" />
+    <script
+      src="https://kit.fontawesome.com/c34c518110.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body class="font-roboto font dark:bg-gray-900">
+  <body class="font-roboto">
     <!-- SCRIPTY které se musí nahrát co nejdříve -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.8/lottie.min.js"></script>
     <script type="module" src="./src/animation.js"></script>
-    <!-- NAVBAR  -->
-    <nav
-      class="p-4 text-white dark:bg-gray-900 md:flex md:items-center md:justify-between"
-    >
-      <div class="flex items-center justify-between">
-        <a
-          href="#"
-          class="text-2xl font-bold transition-colors hover:text-blue-500"
-          >Marketingová Agentura</a
-        >
-        <div class="md:hidden">
-          <!-- Upravené tlačítko hamburgeru -->
-          <button id="hamburgerBtn" class="h-8 w-8 text-blue-500">☰</button>
-        </div>
-      </div>
-      <div
-        class="mt-2 flex flex-col items-start space-y-4 md:mt-0 md:flex-row md:items-center md:space-y-0 md:space-x-4"
-        id="navMenu"
-      >
-        <a href="#" class="transition-colors hover:text-blue-500">Služby</a>
-        <a href="./faq.html" class="transition-colors hover:text-blue-500"
-          >FAQ</a
-        >
-        <a href="#" class="transition-colors hover:text-blue-500">Blog</a>
-        <a href="#" class="transition-colors hover:text-blue-500">Kontakt</a>
-        <a
-          href="/kontakty"
-          class="mt-4 inline-flex items-center rounded border-0 bg-teal-400 p-1.5 px-3 text-base hover:bg-teal-600"
-        >
-          Kontaktujte nás
-          <svg
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            class="ml-1 h-4 w-4"
-            viewBox="0 0 24 24"
+    <div class="bg-white pb-6 sm:pb-8 lg:pb-12">
+      <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
+        <header class="mb-4 flex items-center justify-between py-4 md:py-8">
+          <!-- logo - start -->
+          <a
+            href="/"
+            class="inline-flex items-center text-2xl font-bold uppercase text-black hover:text-indigo-500 md:text-3xl"
+            aria-label="logo"
           >
-            <path d="M5 12h14M12 5l7 7-7 7"></path>
-          </svg>
-        </a>
-      </div>
-    </nav>
-    <!-- HEADER -->
-    <header
-      class="relative overflow-hidden bg-blue-600 py-48 text-center text-white"
-    >
-      <!-- Pozadí s videem -->
-      <video
-        class="absolute top-0 left-0 h-full w-full object-cover"
-        autoplay
-        muted
-        loop
-      >
-        <source src="./src/assets/Hero.mp4" type="video/mp4" />
-        Váš prohlížeč nepodporuje video tag.
-      </video>
+            <img src="./src/assets/logo.svg" alt="logo" class="h-[7rem]" />
+            Socionet
+          </a>
+          <!-- logo - end -->
 
-      <!-- Obsah headeru -->
-      <div class="relative z-10 mt-32">
-        <h1 class="text-6xl font-bold text-white">
-          Vaše cesta k
-          <span
-            class="bg-gradient-to-r from-indigo-700 to-pink-500 box-decoration-clone py-1.5 px-2 text-white"
-            >online úspěchu!</span
+          <!-- nav - start -->
+          <nav class="hidden gap-12 lg:flex">
+            <a
+              href="#"
+              class="text-lg font-semibold text-gray-600 transition duration-100 hover:text-indigo-500 active:text-indigo-700"
+              >Služby</a
+            >
+            <a
+              href="#"
+              class="text-lg font-semibold text-gray-600 transition duration-100 hover:text-indigo-500 active:text-indigo-700"
+              >FAQ</a
+            >
+            <a
+              href="#"
+              class="text-lg font-semibold text-gray-600 transition duration-100 hover:text-indigo-500 active:text-indigo-700"
+              >Blog</a
+            >
+            <a
+              href="#"
+              class="text-lg font-semibold text-gray-600 transition duration-100 hover:text-indigo-500 active:text-indigo-700"
+              >Kontakt</a
+            >
+          </nav>
+          <!-- nav - end -->
+
+          <!-- buttons - start -->
+          <a
+            href="#"
+            class="hidden rounded-lg bg-gray-200 px-8 py-3 text-center text-sm font-semibold text-gray-500 outline-none ring-indigo-300 transition duration-100 hover:bg-gray-300 focus-visible:ring active:text-gray-700 md:text-base lg:inline-block"
+            >Kontaktujte nás</a
           >
-        </h1>
-        <p class="mt-2 text-2xl decoration-4 underline-offset-[6px]">
-          Posunujeme značky na další úroveň.
-        </p>
-        <button
-          class="mt-6 transform rounded-full bg-white px-6 py-3 text-blue-600 shadow-lg transition-transform hover:scale-105"
+
+          <button
+            type="button"
+            class="inline-flex items-center gap-2 rounded-lg bg-gray-200 px-2.5 py-2 text-sm font-semibold text-gray-500 ring-indigo-300 hover:bg-gray-300 focus-visible:ring active:text-gray-700 md:text-base lg:hidden"
+            id="hamburgerBtn"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h6a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                clip-rule="evenodd"
+              />
+            </svg>
+
+            Menu
+          </button>
+          <!-- buttons - end -->
+        </header>
+
+        <section
+          class="min-h-96 relative flex flex-1 shrink-0 items-center justify-center overflow-hidden rounded-lg bg-gray-100 py-16 shadow-lg md:py-20 xl:py-48"
         >
-          Rezervujte konzultaci
-        </button>
+          <!-- video - start -->
+          <video
+            class="rellax absolute inset-0 h-full w-full object-cover object-center"
+            autoplay
+            muted
+            loop
+            data-rellax-speed="-2"
+          >
+            <source src="./src/assets/Hero.mp4" type="video/mp4" />
+            Váš prohlížeč nepodporuje video tag.
+          </video>
+          <!-- video - end -->
+
+          <!-- overlay - start -->
+          <div class="absolute inset-0 bg-indigo-500 mix-blend-multiply"></div>
+          <!-- overlay - end -->
+
+          <!-- text start -->
+          <div class="relative flex flex-col items-center p-4 sm:max-w-xl">
+            <h1
+              class="mb-8 text-center text-4xl font-bold text-white sm:text-5xl md:mb-12 md:text-6xl"
+            >
+              <span
+                class="bg-gradient-to-r from-white to-indigo-500 box-decoration-clone bg-clip-text py-1.5 px-2 text-transparent"
+                >Vaše cesta k online úspěchu!</span
+              >
+            </h1>
+
+            <div
+              class="flex w-full flex-col gap-2.5 sm:flex-row sm:justify-center"
+            >
+              <a
+                href="#"
+                class="inline-block rounded-lg bg-indigo-500 px-8 py-3 text-center text-sm font-semibold text-white outline-none ring-indigo-300 transition duration-100 hover:bg-indigo-600 focus-visible:ring active:bg-indigo-700 md:text-base"
+                >Rezervujte konzultaci</a
+              >
+
+              <a
+                href="#"
+                class="inline-block rounded-lg bg-gray-200 px-8 py-3 text-center text-sm font-semibold text-gray-500 outline-none ring-indigo-300 transition duration-100 hover:bg-gray-300 focus-visible:ring active:text-gray-700 md:text-base"
+                >Více informací</a
+              >
+            </div>
+          </div>
+
+          <!-- text end -->
+        </section>
+        <!-- burgermenu - start -->
+        <div
+          id="burgerMenu"
+          class="fixed inset-0 z-10 hidden bg-white p-4 md:hidden"
+        >
+          <div class="flex justify-end">
+            <button
+              type="button"
+              class="inline-flex items-center gap-2 rounded-lg bg-gray-200 px-2.5 py-2 text-sm font-semibold text-gray-500 ring-indigo-300 hover:bg-gray-300 focus-visible:ring active:text-gray-700"
+              id="closeBtn"
+            >
+              <i class="fas fa-times text-2xl"></i>
+              Zavřít
+            </button>
+          </div>
+          <div
+            class="flex h-full flex-col items-center justify-center gap-4 text-2xl font-bold"
+          >
+            <a href="#" class="block py-2 text-gray-600 hover:text-indigo-500"
+              >Služby</a
+            >
+            <a href="#" class="block py-2 text-gray-600 hover:text-indigo-500"
+              >FAQ</a
+            >
+            <a href="#" class="block py-2 text-gray-600 hover:text-indigo-500"
+              >Blog</a
+            >
+            <a href="#" class="block py-2 text-gray-600 hover:text-indigo-500"
+              >Kontakt</a
+            >
+            <div class="absolute bottom-5 flex justify-center gap-4">
+              <a href="#" class="text-gray-500 hover:text-indigo-500">
+                <i class="fab fa-instagram text-4xl"></i>
+              </a>
+              <a href="#" class="text-gray-500 hover:text-indigo-500">
+                <i class="fab fa-facebook text-4xl"></i>
+              </a>
+              <a href="#" class="text-gray-500 hover:text-indigo-500">
+                <i class="fab fa-tiktok text-4xl"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- burgermenu - end -->
       </div>
-    </header>
+    </div>
 
     <!-- Animace služeb -->
     <section class="mx-auto max-w-screen-xl px-4 py-12 sm:px-6 lg:px-8">
@@ -224,11 +315,11 @@
     </section>
 
     <!-- BLOG -->
-    <section class="py-6 text-white dark:bg-gray-900 sm:py-8 lg:py-12">
+    <section class="py-6 text-gray-500 sm:py-8 lg:py-12">
       <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
         <!-- text - start -->
         <div class="mb-6 flex items-end justify-between md:mb-16">
-          <h2 class="mb-4 text-2xl font-bold md:mb-6 lg:text-3xl">Blog</h2>
+          <h2 class="mt-4 text-2xl font-bold lg:text-3xl">Blog</h2>
           <a
             href="#"
             class="inline-block rounded-lg border bg-white px-4 py-2 text-center text-sm font-semibold text-gray-500 outline-none ring-indigo-300 transition duration-100 hover:bg-gray-100 focus-visible:ring active:bg-gray-200 md:px-8 md:py-3 md:text-base"
@@ -359,7 +450,7 @@
       </div>
     </section>
     <!-- TESTIMONIAL -->
-    <section class="py-6 dark:bg-gray-900 sm:py-8 lg:py-12">
+    <section class="py-6 sm:py-8 lg:py-12">
       <div class="mx-auto max-w-screen-xl px-4 md:px-8">
         <h2
           class="mb-8 text-center text-2xl font-bold text-white md:mb-12 lg:text-3xl"
@@ -445,37 +536,8 @@
       </div>
     </section>
 
-    <!-- Tým -->
-    <section
-      class="container mx-auto mt-20 gap-10 text-white md:grid md:grid-cols-2 lg:grid-cols-2"
-    >
-      <h2 class="col-span-full mb-10 text-center text-3xl font-bold">
-        Náš Tým
-      </h2>
-      <!-- Člen 1 -->
-      <div class="mx-auto text-center md:col-span-1 lg:col-span-1">
-        <img
-          src="path_to_member1.jpg"
-          alt="Obrázek člena týmu 1"
-          class="mx-auto mb-5 h-48 w-48 rounded-full bg-white shadow"
-        />
-        <h3 class="text-2xl font-bold">Jméno Člena 1</h3>
-        <p>Popis role a schopností člena 1.</p>
-      </div>
-      <!-- Člen 2 -->
-      <div class="mx-auto text-center md:col-span-1 lg:col-span-1">
-        <img
-          src="path_to_member2.jpg"
-          alt="Obrázek člena týmu 2"
-          class="mx-auto mb-5 h-48 w-48 rounded-full bg-white shadow"
-        />
-        <h3 class="text-2xl font-bold">Jméno Člena 2</h3>
-        <p>Popis role a schopností člena 2.</p>
-      </div>
-    </section>
-
     <!-- Kontakt -->
-    <section class="text-white dark:bg-gray-900 sm:py-8 lg:py-12">
+    <section class="text-white sm:py-8 lg:py-12">
       <div class="py-6 sm:py-8 lg:py-12">
         <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
           <div
@@ -626,6 +688,7 @@
         </span>
       </div>
     </footer>
+
     <script type="module" src="./src/main.js"></script>
     <script type="module" src="./src/photo.js"></script>
   </body>
