--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,17 @@
     <title>FAQ</title>
   </head>
   <body class="">
+    <!-- ANIMATED SVG -->
+    <section class="flex h-96 bg-gray-200">
+      <div class="relative flex h-full w-full overflow-hidden" id="my-wrapper">
+        <img
+          id="my-svg"
+          src="https://images.unsplash.com/photo-1539035104074-dee66086b5e3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjI0MX0&auto=format&fit=crop&w=2550&q=80"
+          alt="Animated Image"
+          class="absolute top-0 left-0 h-full w-full object-cover transition-transform duration-700 ease-out"
+        />
+      </div>
+    </section>
     <!-- NAVBAR  -->
     <nav class="p-4 text-white md:flex md:items-center md:justify-between">
       <div class="flex items-center justify-between">
